--- a/evewspace/POS/templates/edit_pos.html
+++ b/evewspace/POS/templates/edit_pos.html
@@ -1,12 +1,16 @@
 <div title="Edit Starbase" id="editPOSDialog" class="addPOSDialog">
+    <div class="modal-header">
+        <h4>Edit POS</h4>
+    </div>
+    <div class="modal-body">
     <form id="editPOSForm" action="/pos/{{system.pk}}/{{pos.id}}/edit/" method="POST">
         {% csrf_token %}
-        Full Corp Name: <input id="corpBox" value="{{pos.corporation.name}}" name="corp" type="text" > <br />
+        Full Corp Name: <input id="corpBox" class="corpAuto" value="{{pos.corporation.name}}" name="corp" type="text" > <br />
         <span class="label label-warning" id="digiterror">Please enter digits only for planet and moon. </span><br /><br />
         Planet: <input name="planet" value="{{pos.planet}}" class="input-mini" type="text"> 
         Moon: <input name="moon" value="{{pos.moon}}"class="input-mini" type="text"> <br />
         Tower Name: <input name="name" value="{{pos.posname}}" type="text"> <br />
-        Tower Type: <input id="towertype" value="{{pos.towertype.name}}" name="tower" type="text"> <br />
+        Tower Type: <input id="towertype" class="typeAuto" value="{{pos.towertype.name}}" name="tower" type="text"> <br />
         Status: <br />
         <input type="radio" onclick="Test(this);" name="status" value="0" {% if pos.status == 0 %}checked="checked" {% endif %}> &nbsp Unanchored<br />
         <input type="radio" name="status" onclick="Test(this);" value="1"{% if pos.status == 1 %}checked="checked" {% endif %}> &nbsp Anchored <br />
@@ -22,27 +26,26 @@
         Fitting: <br />
         <textarea  rows="10" name="fitting">{{fitting}}</textarea><br />
         Parse as D-Scan Paste: <input type="checkbox" name="dscan" value="1"> <br />
-        <input class="btn btn-primary" type="submit" value="Save POS">
     </form>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" onclick="$('#modalHolder').modal('hide);">Cancel</a>
+        <a href="#" class="btn btn-primary" id="btnEditPOS">Save POS</a>
+    </div>
     <script type="text/javascript">
     function Test(rad){
         var rads=document.getElementsByName(rad.name);
         document.getElementById('rftime').style.display=(rads[3].checked)?'block':'none';
     }
-    $('#corpBox').autocomplete({
-                source: "/search/corp",
-                minLength: 2
-                });
-    $('#towertype').autocomplete({
-                source: "/search/item",
-                minLength: 2
-                });
     $('#editPOSForm').submit(function(e){
                 e.preventDefault();
                 EditPOS({{pos.pk}}, {{system.pk}});
-                $('#editPOSDialog').dialog('close');
-                $('#editPOSDialog').remove();
+                $('#modalHolder').modal('hide');
                 return false;
-            });
+                });
+    $('#btnEditPOS').click(function(e){
+                EditPOS({{pos.pk}}, {{system.pk}});
+                $('#modalHolder').modal('hide');
+                });
     </script>
 </div>
