Create pre-filtered search for control towers. Refs #126

--- a/evewspace/POS/templates/add_pos.html
+++ b/evewspace/POS/templates/add_pos.html
@@ -10,7 +10,7 @@
         Planet: <input name="planet" class="input-mini" type="text"> 
         Moon: <input name="moon" class="input-mini" type="text"> <br />
         Tower Name: <input name="name" type="text"> <br />
-        Tower Type: <input id="towertype" class="typeAuto" name="tower" type="text"> <br />
+        Tower Type: <input id="towertype" class="towerAuto" name="tower" type="text"> <br />
         Status: <br /><input type="radio" onclick="Test(this);" name="status" value="0">&nbsp Unanchored 
         <br /><input type="radio" name="status" onclick="Test(this);" value="1">&nbsp Anchored
         <br /><input type="radio" name="status" onclick="Test(this);" value="2">&nbsp Onlining
