--- a/evewspace/POS/templates/edit_pos.html
+++ b/evewspace/POS/templates/edit_pos.html
@@ -10,7 +10,7 @@
         Planet: <input name="planet" value="{{pos.planet}}" class="input-mini" type="text"> 
         Moon: <input name="moon" value="{{pos.moon}}"class="input-mini" type="text"> <br />
         Tower Name: <input name="name" value="{{pos.posname}}" type="text"> <br />
-        Tower Type: <input id="towertype" class="typeAuto" value="{{pos.towertype.name}}" name="tower" type="text"> <br />
+        Tower Type: <input id="towertype" class="towerAuto" value="{{pos.towertype.name}}" name="tower" type="text"> <br />
         Status: <br />
         <input type="radio" onclick="Test(this);" name="status" value="0" {% if pos.status == 0 %}checked="checked" {% endif %}> &nbsp Unanchored<br />
         <input type="radio" name="status" onclick="Test(this);" value="1"{% if pos.status == 1 %}checked="checked" {% endif %}> &nbsp Anchored <br />
