Backend change to allow for system effect displays.
Close system details when that mapsystem is deleted.
Fix button classes in Map settings.
Display dashed border on selected MapSystem.

Refs #126
Fixes #122

--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -33,6 +33,7 @@
             <input type="radio" class="sysAddInput" name="bottomBubbled" value="0" checked="checked">No 
             <input type="radio" class="sysAddInput" name="bottomBubbled" value="1">Yes
             <br /><br />
+            <input type="submit" style="display: none;">
         </form>
     </div>
     <div class="modal-footer">
