--- a/evewspace/Map/templates/edit_system.html
+++ b/evewspace/Map/templates/edit_system.html
@@ -12,6 +12,7 @@
         <h4>Occupied: </h4>
         <textarea name="occupied" style="color: #000000;" id="occupiedField" rows=8 cols=50 >{{occupied}}</textarea><br />
         <br />
+        <input type="submit" style="display: none;">
     </form>
 </div>
 <div class="modal-footer">
