--- a/evewspace/Map/templates/edit_wormhole.html
+++ b/evewspace/Map/templates/edit_wormhole.html
@@ -30,6 +30,7 @@
          <input type="radio" class="editWormholeInput" name="bottomBubbled" value="1" {% if wormhole.bottom_bubbled %} checked="checked" {% endif %}> Yes
         <br />
         <br />
+        <input type="submit" style="display: none;">
     </form>
 </div>
 <div class="modal-footer">
