--- a/evewspace/Map/templates/general_settings.html
+++ b/evewspace/Map/templates/general_settings.html
@@ -26,6 +26,6 @@
         </tr>
     </table>
     <br />
-    <input type="submit" value="Save Changes">
+    <input type="submit" class="btn btn-primary" value="Save Changes">
 </form>
 
