--- a/evewspace/Map/templates/global_perms.html
+++ b/evewspace/Map/templates/global_perms.html
@@ -30,7 +30,7 @@
         {% endfor %}
     </table>
     <br />
-    <input type="submit" value="Save Permissions">
+    <input type="submit" class="btn btn-primary" value="Save Permissions">
 </form>
 <script type="text/javascript">
     $('#globalPermForm').submit(function(e){
