--- a/evewspace/Map/templates/igb_system_add_dialog.html
+++ b/evewspace/Map/templates/igb_system_add_dialog.html
@@ -45,6 +45,7 @@
         <input type="radio" class="sysAddInput" name="bottomBubbled" value="1">Yes
         <br />
         <input id="sysAddSubmit" class="sysAddInput btn btn-primary" type="submit" value="Add System">
+        <input type="submit" style="display: none;">
     </form>
 </div>
 <div class="modal-footer">
