Remove container-fluid from system tooltip div.

--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -1,4 +1,4 @@
-<div class="mapSysInfo container-fluid row">
+<div class="mapSysInfo row">
    <div class="sysClassSpan span3">
          <h4 class="sysFriendlySpan">{{mapsys.friendlyname}}</h4>
         {% if system.sysclass < 7 %}
