Change width and margin of sys tooltip info box.

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -35,7 +35,7 @@
 }
 .occupiedTooltip
 {
-    width: 100%;
+    width: 90%;
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
@@ -45,7 +45,8 @@
 }
 .infoTooltip
 {
-    width: 100%;
+    margin-top: 10px;
+    width: 90%;
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
