Correct graphical glitch wit system sigs panel.

--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -82,8 +82,8 @@
     </div>
      
 </div>
-  <div id="sigsPanel" class="sigsPanel page-header span8">
-       <div id=systemSigsWell class="systemSigsWell well well-small">
+  <div id="sigsPanel" class="sigsPanel page-header well well-small span8">
+       <div id=systemSigsWell class="systemSigsWell">
             <h5>Signatures ({{system.signatures.count}} Total)</h5>
             <div id="sigAddPanel" class"sigAddPanel">
                 <h6>Add Signature <i class="icon-download" onclick="GetBulkImport({{mapsys.pk}});"></i></h6>
