Replace FC Web Tools branding.

--- a/evewspace/core/templates/home.html
+++ b/evewspace/core/templates/home.html
@@ -14,6 +14,7 @@
 {% endblock %}
 {% block contentheader %} <h2> Welcome, {{user.username}}!</h2> {% endblock %}
 {% block content%} 
+<p class="label label-success">Welcome to Eve-Wspace! This alpha test is primarily for mapping functions. This home page is a placeholder.</p>
 <div id="homeRow1" class="row">
 <div class="span6 homecollapse">
 	{% load posstatus %}
