--- a/evewspace/core/templates/settings.html
+++ b/evewspace/core/templates/settings.html
@@ -14,6 +14,7 @@
 <div class="tab-content">
     <div id="profile" class="tab-pane active">
         <h1>User Profile:</h1>
+        <p class="label label-success">This section is under construction. Please check back later. </p>
     </div>
     {% if perms.Map.map_admin %}
     <div id="mapadmin" class="tab-pane">
