--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -1,6 +1,9 @@
 <div id="sysMenu" class="sysMenuDiv">
 <div class="btn-group btn-group-vertical">
     <a class="btn" onclick="DisplaySystemDetails({{mapsys.pk}}, {{mapsys.system.pk}});" href="#sysInfo">Details </a>
+    {% if is_igb and mapsys.system.sysclass > 6 %}
+    <a class="btn" onclick="CCPEVE.setDestination({{mapsys.system.pk}});">Set Autopilot</a>
+    {% endif %}
     {% if not is_igb %}
     <a class="btn" onclick="AssertLocation({{mapsys.pk}});">I'm Here</a>
     {% endif %}
