Change Fine to Normal for womrhole status text.

--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -12,11 +12,11 @@
 
             <h5>Wormhole Status:</h5>
             Time Status: &nbsp
-            <input type="radio" class="sysAddInput" name="timeStatus" value="0" checked="checked">Fine &nbsp
+            <input type="radio" class="sysAddInput" name="timeStatus" value="0" checked="checked">Normal &nbsp
             <input type="radio" class="sysAddInput" name="timeStatus" value="1">End of Life
             <br />
             Mass Status: &nbsp
-            <input type="radio" class="sysAddInput" name="massStatus" value="0" checked="checked">Fine &nbsp
+            <input type="radio" class="sysAddInput" name="massStatus" value="0" checked="checked">Normal &nbsp
             <input type="radio" class="sysAddInput" name="massStatus" value="1">First Shrink &nbsp
             <input type="radio" class="sysAddInput" name="massStatus" value="2">Critical<br />
             <br />
