--- a/evewspace/Map/templates/igb_system_add_dialog.html
+++ b/evewspace/Map/templates/igb_system_add_dialog.html
@@ -11,11 +11,11 @@
 
         <h4>Wormhole Status:</h4>
         Time Status: <br />
-        <input type="radio" class="sysAddInput" name="timeStatus" value="0" checked="checked">Fine<br />
+        <input type="radio" class="sysAddInput" name="timeStatus" value="0" checked="checked">Normal<br />
         <input type="radio" class="sysAddInput" name="timeStatus" value="1">End of Life<br />
         <br />
         Mass Status: <br />
-        <input type="radio" class="sysAddInput" name="massStatus" value="0" checked="checked">Fine<br />
+        <input type="radio" class="sysAddInput" name="massStatus" value="0" checked="checked">Normal<br />
         <input type="radio" class="sysAddInput" name="massStatus" value="1">First Shrink<br />
         <input type="radio" class="sysAddInput" name="massStatus" value="2">Critical<br />
         <br />
