--- a/evewspace/POS/templates/edit_pos.html
+++ b/evewspace/POS/templates/edit_pos.html
@@ -29,7 +29,7 @@
     </form>
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" onclick="$('#modalHolder').modal('hide);">Cancel</a>
+        <a href="#" class="btn" onclick="$('#modalHolder').modal('hide');">Cancel</a>
         <a href="#" class="btn btn-primary" id="btnEditPOS">Save POS</a>
     </div>
     <script type="text/javascript">
